--- a/KYPFanfou/Splash.storyboard
+++ b/KYPFanfou/Splash.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Splash View Controller-->
         <scene sceneID="6ig-I1-0XX">
             <objects>
-                <viewController id="lnp-n0-CPe" sceneMemberID="viewController">
+                <viewController id="lnp-n0-CPe" customClass="SplashViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0Tv-R8-agX"/>
                         <viewControllerLayoutGuide type="bottom" id="0mh-mO-Bi8"/>
